--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -300,9 +300,9 @@
    "source": [
     "### 3D Example of hollow core slab\n",
     "\n",
-    "<div style=\"text-align: center;\">\n",
-    "    <iframe src=\"../../_static/Connection_Concrete_HollowCore.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
-    "</div>"
+    "<div style=\"text-align: center; background-color: white;\">\n",
+    "    <iframe src=\"../../_static/Connection_Concrete_HollowCore.html\" width=\"750\" height=\"750\" frameborder=\"0\" style=\"background-color: white;\"></iframe>\n",
+    "</div>\n"
    ]
   }
  ],
