--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -185,10 +185,6 @@
     "Minimum conditions for the bearing length of a Hollow Core slab.\n",
     "```\n",
     "\n",
-    "<div style=\"text-align: center;\">\n",
-    "    <iframe src=\"../../_static/Connection_Concrete.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
-    "</div>\n",
-    "\n",
     "## Product specifications VBI isolation slabfloor A320\n",
     "\n",
     "```{table} Product specifications VBI isolation slabfloor A320.\n",
@@ -298,6 +294,21 @@
     "\n",
     "[^1]: [VBI.nl](https://www.vbi.nl/): Hollow core slabs and system floors.\n",
     "[^2]: [Dycore.nl](https://www.dycore.nl/): Different floor systems. CAD drawings and details can be downloaded. Design graphs are available."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "### 3D Example of hollow core slab\n",
+    "\n",
+    "<div style=\"text-align: center; background-color: white;\">\n",
+    "    <iframe src=\"../../_static/Connection_Concrete_HollowCore.html\" width=\"750\" height=\"750\" frameborder=\"0\" style=\"background-color: white;\"></iframe>\n",
+    "</div>\n"
    ]
   }
  ],
