--- a/book/design/steel/3d_connections.ipynb
+++ b/book/design/steel/3d_connections.ipynb
@@ -4,25 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3D Connections in steel\n",
+    "# 3D Connections\n",
     "\n",
-    "## Standard steel connection\n",
+    "Explore the structural connections of steel through interactive 3D visualisations. This section highlights both standard and advanced connection techniques, showcasing their applications and benefits in steel construction.\n",
+    "\n",
+    "Use the menu in the left to add or remove layers. \n",
+    "\n",
+    "## Standard connection\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Steel_Standard.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
     "</div>\n",
     "\n",
-    "## Corner steel connection\n",
+    "Or download the file [here](../../_static/Connection_Steel_Standard.html) and open it in your web browser.\n",
+    "\n",
+    "## Corner connection\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Steel_Corner.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
     "</div>\n",
     "\n",
-    "## Truss steel connection\n",
+    "Or download the file [here](../../_static/Connection_Steel_Corner.html) and open it in your web browser.\n",
+    "\n",
+    "## Truss connection\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Steel_Truss.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
-    "</div>"
+    "</div>\n",
+    "\n",
+    "Or download the file [here](../../_static/Connection_Steel_Truss.html) and open it in your web browser."
    ]
   }
  ],
