--- a/book/design/concrete/3d_connections.ipynb
+++ b/book/design/concrete/3d_connections.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3D Connections in concrete\n",
+    "# 3D Connections\n",
+    "\n",
+    "Explore the structural connections of concrete through interactive 3D visualisations. This section highlights both standard and advanced connection techniques, showcasing their applications and benefits in concrete construction.\n",
+    "\n",
+    "Use the menu in the left to add or remove layers. \n",
     "\n",
     "## Prefab concrete connection\n",
     "\n",
@@ -12,11 +16,15 @@
     "    <iframe src=\"../../_static/Connection_Concrete_Standard.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
     "</div>\n",
     "\n",
-    "## 3D Example of hollow core slab\n",
+    "Or download the file [here](../../_static/Connection_Concrete_Standard.html) and open it in your web browser.\n",
+    "\n",
+    "## Hollow core slab connection\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Concrete_HollowCore.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
-    "</div>"
+    "</div>\n",
+    "\n",
+    "Or download the file [here](../../_static/Connection_Concrete_HollowCore.html) and open it in your web browser."
    ]
   }
  ],
