--- a/book/design/timber/3d_connections.ipynb
+++ b/book/design/timber/3d_connections.ipynb
@@ -4,19 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3D Connections in timber\n",
+    "# 3D Connections\n",
     "\n",
-    "## Standard connection in timber\n",
+    "Explore the structural connections of timber through interactive 3D visualisations. This section highlights both standard and advanced connection techniques, showcasing their applications and benefits in timber construction.\n",
+    "\n",
+    "Use the menu in the left to add or remove layers. \n",
+    "\n",
+    "## Standard connection\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Timber_Standard.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
     "</div>\n",
     "\n",
-    "## Advanced connection in timber\n",
+    "Or download the file [here](../../_static/Connection_Timber_Standard.html) and open it in your web browser.\n",
+    "\n",
+    "## Advanced connection\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <iframe src=\"../../_static/Connection_Timber_Advanced.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
-    "</div>\n"
+    "</div>\n",
+    "\n",
+    "Or download the file [here](../../_static/Connection_Timber_Advanced.html) and open it in your web browser."
    ]
   }
  ],
