--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "With the aid of design tools (rules of thumb, diagrams and tables) the overall\n",
     "dimensions of the structure (including stability measures) are estimated and critical\n",
-    "connections are studied for feasibility. The sections in this Quick Reference on\n",
+    "connections are studied for feasibility. The sections in the Structural Design Essentials on\n",
     "different materials contain information on structural elements (such as precast conrete \n",
     "beams, hollow core slabs etc.) and tables with available (steel) profiles to come to \n",
     "reasonable dimensions. Already in this stage it is wise to orient oneself to different \n",
