--- a/book/design_workflow/general_loads/variable_loads_1_buildings.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_1_buildings.ipynb
@@ -73,15 +73,15 @@
    "metadata": {},
    "source": [
     "**a** The given value needs to be applied between the shelves. Underneath the shelves the following formula needs to be applied:  \n",
-    ">$$\n",
-    ">q_k = (A_1*γ_{bk}*h+A_2*p_0)/(A_1+A_2)\n",
-    ">$$\n",
-    ">\n",
-    ">$A_1$: Area beneath the shelves [$m^2$]  \n",
-    ">$A_2$: Remaining area [$m^2$]  \n",
-    ">$γ_{bk}$: Dead weight of books: 6 [$kg/m^3$]  \n",
-    ">$p_0$: Action on floors between shelves: 2,5 [$kN/m^2$]  \n",
-    ">$h$: Height of the shelves  \n",
+    "$$\n",
+    "q_k = (A_1*γ_{bk}*h+A_2*p_0)/(A_1+A_2)\n",
+    "$$\n",
+    "\n",
+    "$A_1$: Area beneath the shelves [$m^2$]  \n",
+    "$A_2$: Remaining area [$m^2$]  \n",
+    "$γ_{bk}$: Dead weight of books: 6 [$kg/m^3$]  \n",
+    "$p_0$: Action on floors between shelves: 2,5 [$kN/m^2$]  \n",
+    "$h$: Height of the shelves  \n",
     "\n",
     "**b** The concentrated load is applied on a surface of $0,1 * 0,1 m^2$  \n",
     "\n",
