--- a/book/basics/steel/products_2_cold_rolled_sections.ipynb
+++ b/book/basics/steel/products_2_cold_rolled_sections.ipynb
@@ -7,7 +7,7 @@
     "# Products 2: cold-rolled sections\n",
     "\n",
     "## U and C profiles\n",
-    "```{figure} Images/u_and_c_profiles.png\n",
+    "```{figure} Images/ProfielenAangevuldFinal-04.png\n",
     "---\n",
     "---\n",
     "Cold formed sections with and without stiffeners are available with equal (eq) or unequal (ue) height and width.\n",
@@ -25,7 +25,7 @@
     "Applications: Are used in residential buildings, carcase work, storage systems and finishings. Also used as purlins, or floorbeams. Due to plastic strains during fabrication the material properties differ from hot rolled sections [^1].\n",
     "\n",
     "## L and Z profiles\n",
-    "```{figure} Images/L_and_Z_sections.png\n",
+    "```{figure} Images/ProfielenAangevuldFinal-05.png\n",
     "---\n",
     "---\n",
     "Cold formed L or Z sections with and without stiffeners with equal (eq) or unequal (eu) height and width.\n",
