--- a/book/basics/timber/material_characteristics_timber.ipynb
+++ b/book/basics/timber/material_characteristics_timber.ipynb
@@ -181,11 +181,15 @@
     "The material properties given in the tables above are characteristic values. Depending on the local environment, use and load duration these values have to be adjusted to design values. The design value of the Young’s modulus is used to determine the force distribution in a statically indeterminate structure.\n",
     "\n",
     "Strength properties:  \n",
-    "$X_d = k_{mod} \\cdot \\frac{X_k}{\\gamma_M}$\n",
+    "\\begin{gather*}\n",
+    "X_d = k_{mod} \\cdot \\frac{X_k}{\\gamma_M}\n",
+    "\\end{gather*}\n",
     "\n",
     "Stiffness properties:  \n",
-    "$E_d = \\frac{E_{mean}}{\\gamma_M}$  \n",
-    "$G_d = \\frac{G_{mean}}{\\gamma_M}$\n",
+    "\\begin{gather*}\n",
+    "E_d = \\frac{E_{mean}}{\\gamma_M}\n",
+    "G_d = \\frac{G_{mean}}{\\gamma_M}\n",
+    "\\end{gather*}\n",
     "\n",
     "Where:  \n",
     "$X_d$ = Design value of strength property  \n",
