--- a/book/design/concrete/composite_floors.ipynb
+++ b/book/design/concrete/composite_floors.ipynb
@@ -29,21 +29,38 @@
     "```    \n",
     "\n",
     "```{figure} Images/CompositeFloors2.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "Example of composite floor\n",
     "```    \n",
     "\n",
     "## Applications\n",
     "\n",
     "```{figure} Images/CompositeApplication1.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```   \n",
     "```{figure} Images/CompositeApplication2.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```  \n",
     "```{figure} Images/CompositeApplication3.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```  \n",
     "```{figure} Images/CompositeApplication4.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```  \n",
     "```{figure} Images/CompositeApplication5.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "```  \n",
     "\n",
     "## Execution aspects\n",
@@ -66,7 +83,9 @@
     "```    \n",
     "\n",
     "```{figure} Images/CompositeFloors2.jpg\n",
-    "\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
     "HODY SB60 composite floor example.\n",
     "```  \n",
     "\n",
