--- a/book/design_workflow/general_drawing/architectural_drawings.ipynb
+++ b/book/design_workflow/general_drawing/architectural_drawings.ipynb
@@ -9,7 +9,7 @@
     "For architects, the following three drawings of the structure are of most interest:\n",
     "\n",
     "## Exploded axonometric drawing\n",
-    "Exploded axonometric drawing (also called Axo): In this, the structure can be seen in its entirety and the consistency with the architectural design can be conveyed. The stability of the structure can also be assessed. An example is given below. In the chapter drawing examples of Axos of concrete, steel and timber supporting structures are given.  \n",
+    "Exploded axonometric drawing (also called Axo): In this, the structure can be seen in its entirety and the consistency with the architectural design can be conveyed. The stability of the structure can also be assessed. An example is given below. In the chapter *drawing examples* Axos of concrete, steel and timber supporting structures are given.  \n",
     "\n",
     "```{figure} Images/Axonometric_Drawing.jpg\n",
     "---\n",
@@ -20,7 +20,7 @@
     "Axonomentric drawing is an overview of the overall supporting structure. It provides insight into the spatial arrangement in both the horizontal and vertical planes. The vertical and horizontal force distribution of the structure is often easy to see from the Axo because all structural parts are given in a single view. The second important function of the Axo is to show how the supporting structure fits the architectural design intent.\n",
     "\n",
     "## Load-bearing structure floor plans\n",
-    "Load-bearing (Draagconstructie) structure floor plans: These drawings show how vertical force transmission works in the building and contain more detailed information than the axonometric drawing such as materials dimensions, spans and profiles. An example is given below. In the chapter drawing examples of load-bearing floor plans of concrete, steel and timber supporting structures are given.\n",
+    "Load-bearing (Draagconstructie) structure floor plans: These drawings show how vertical force transmission works in the building and contain more detailed information than the axonometric drawing such as materials dimensions, spans and profiles. An example is given below. In the chapter *drawing examples* load-bearing floor plans of concrete, steel and timber supporting structures are given.\n",
     "\n",
     "```{figure} Images/Draagconstructie_Drawing.jpg\n",
     "---\n",
