--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -61,20 +61,20 @@
     "\\frac{E_d}{R_d} \\leq 1\n",
     "$$(unity_check)\n",
     "\n",
-    "- First, both effect E and resistance R are expressed in their characteristic values. For E, this means the value Echar is calculated with a probability of exceedance (overshoot) of 5%. For R, this is the value with a probability of 5% of under shoot, Rchar. This is a standard statistic operation that is done by adding or subtracting 1.64·σ in case of a normal distribution. For loads or materials other distributions may apply, such as Weibull or lognormal distributions.\n",
-    "- Second, on the Effect side, $γ_E$ , the partial load factor, is multiplied with the characteristic value of the load or Effect, resulting in a dimensioning value of E {eq}`E_d`, represented by the blue draw line, and for this example the value $E_d$ = 163 (again, unit does not matter here, as long as both R and E are expressed in the same unit).\n",
+    "- First, both effect $E$ and resistance $R$ are expressed in their characteristic values. For $E$, this means the value $E_{char}$ is calculated with a probability of exceedance (overshoot) of 5%. For $R$, this is the value with a probability of 5% of under shoot, $R_{char}$. This is a standard statistic operation that is done by adding or subtracting $1.64·σ$ in case of a normal distribution. For loads or materials other distributions may apply, such as Weibull or lognormal distributions.\n",
+    "- Second, on the Effect side, $γ_E$ , the partial load factor, is multiplied with the characteristic value of the load or Effect, resulting in a dimensioning value of $E$ {eq}`E_d`, represented by the blue draw line, and for this example the value $E_d$ = 163 (again, unit does not matter here, as long as both $R$ and $E$ are expressed in the same unit).\n",
     "\n",
     "$$\n",
     "E_d = E_{char} \\gamma_E\n",
     "$$(E_d)\n",
     "\n",
-    "- Third, on the Resistance side, the characteristic value of the strength or Resistance is divided by γR, the partial material factor, resulting in a dimensioning value of R {eq}`R_d`, represented by the red draw line, and for this example the value Rd = 201 (same unit as E).\n",
+    "- Third, on the Resistance side, the characteristic value of the strength or Resistance is divided by $γ_R$, the partial material factor, resulting in a dimensioning value of $R$ {eq}`R_d`, represented by the red draw line, and for this example the value $R_d = 201$ (same unit as $E$).\n",
     "\n",
     "$$\n",
     "R_d = \\frac{R_{char}}{\\gamma_R}\n",
     "$$(R_d)\n",
     "\n",
-    "- Fourth and finally, Ed and Rd are compared, in either of the two following ways: direct comparison $E_d ≤ R_d$ or unity check {eq}`unity_check`, the latter with the advantage that it gives some numerical information on the \"safety distance\" between Ed and Rd.\n",
+    "- Fourth and finally, $E_d$ and $R_d$ are compared, in either of the two following ways: direct comparison $E_d ≤ R_d$ or unity check {eq}`unity_check`, the latter with the advantage that it gives some numerical information on the \"safety distance\" between $E_d$ and $R_d$.\n",
     "\n",
     "\n",
     ">```{figure} Images/E_R_normaldistributions.png\n",
@@ -83,12 +83,12 @@
     ">Example\n",
     ">```\n",
     ">\n",
-    ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values Echar and Rchar and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between Ed and Rd represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.81 · $R_d$. The structure is more than safe.\n",
+    ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values $E_{char}$ and $R_{char}$ and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between $Ed$ and $Rd$ represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.81 · $R_d$. The structure is more than safe.\n",
     "\n",
     "\n",
     "## Reliability index\n",
     "\n",
-    "The \"safety distance\" should somehow be numerically linked to the accepted level of failure probability. Understandably, the higher the standard deviation of either or both variables $E$ and $R$, the higher the safety distance should be to achieve the same level of reliabilty. For example, a safety margin of 1 MPa between $Ed$ and $Rd$ does mean less safety for a material with a standard deviation $σ_M$ = 100 MPa than it does for a material with a standard deviation $σ_M$ = 10 MPa. To this end, the reliability index β is defined as a function of the spread of the variables E and R. First, an auxilary reliability function {eq}`reliability` is defined. Furthermore, we also need equations for the mean {eq}`mu_Z` and standard deviation {eq}`sigma_Z` of the reliability $Z$.\n",
+    "The \"safety distance\" should somehow be numerically linked to the accepted level of failure probability. Understandably, the higher the standard deviation of either or both variables $E$ and $R$, the higher the safety distance should be to achieve the same level of reliabilty. For example, a safety margin of 1 MPa between $E_d$ and $R_d$ does mean less safety for a material with a standard deviation $σ_M$ = 100 MPa than it does for a material with a standard deviation $σ_M$ = 10 MPa. To this end, the reliability index β is defined as a function of the spread of the variables $E$ and $R$. First, an auxilary reliability function {eq}`reliability` is defined. Furthermore, we also need equations for the mean {eq}`mu_Z` and standard deviation {eq}`sigma_Z` of the reliability $Z$.\n",
     "\n",
     "$$\n",
     "Z = R - E\n",
@@ -102,7 +102,7 @@
     "\\sigma_Z = \\sqrt{\\sigma_R^2 + \\sigma_E^2}\n",
     "$$(sigma_Z)\n",
     "\n",
-    "The reliability index of this particular example can now be calculated as the proportion between the average and the standard deviation as in equation {eq}`beta`. For our particular example β = 6.8. Using the table below, we can conclude that with this value of β the probability of failure is very small: $Pf$ ≪ 10−8, and that we could have done with a higher $E$ or smaller $R$ or both and still be okay.\n",
+    "The reliability index of this particular example can now be calculated as the proportion between the average and the standard deviation as in equation {eq}`beta`. For our particular example β = 6.8. Using the table below, we can conclude that with this value of β the probability of failure is very small: $P_f$ ≪ 10−8, and that we could have done with a higher $E$ or smaller $R$ or both and still be okay.\n",
     "\n",
     "$$\n",
     "\\beta = \\frac{\\mu_z}{\\sigma_z}\n",
