--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -4908,7 +4908,7 @@
     "| |       | 1.00       | 154  | 365    | 55.0  |\n",
     "```\n",
     "\n",
-    "```{Note}\n",
+    "```{note}\n",
     "The sections have variable width. Section moduli and moments of inertia are given per meter width\n",
     "```\n",
     "\n",
