--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The design process\n",
     "\n",
-    "The design process is part of the life cycle of a structure, consisting of the ‘idea-phase’, the ‘design phase’, the ‘construction phase’, the ‘use and maintenance phase’, and the ‘end-of-life phase’ (the latter possibly being reuse). The structural engineer primarily, but not solely, acts in the ‘design phase’. Especially for starting structural designers who mostly have background knowledge in structural mechanics and mathematics, it is necessary to realise that designing is fundamentally different from 'solving equations'. In most cases, structures are complex systems, developed according to structural concepts and consisting of multiple subsystems. This complexity makes the design process less straightforward than just mechanics or mathematics, and a problem solving strategy is needed. One of these strategies is to break down the process into smaller steps, which are iteratively followed to reach a (not 'the') solution.\n",
+    "The design process is part of the life cycle of a structure, consisting of the *idea-phase*, the *design phase*, the *construction phase*, the *use and maintenance phase*, and the *end-of-life phase* (the latter possibly being reuse). The structural engineer primarily, but not solely, acts in the *design phase*. Especially for starting structural designers who mostly have background knowledge in structural mechanics and mathematics, it is necessary to realise that designing is fundamentally different from *solving equations*. In most cases, structures are complex systems, developed according to structural concepts and consisting of multiple subsystems. This complexity makes the design process less straightforward than just mechanics or mathematics, and a problem solving strategy is needed. One of these strategies is to break down the process into smaller steps, which are iteratively followed to reach a (not 'the') solution.\n",
     "\n",
     "This iterative process is illustrated by the following image:\n",
     "\n",
@@ -16,7 +16,7 @@
     "Flowchart of the structural design developed by Voorendt et al (2015)\n",
     "```\n",
     "\n",
-    "The terms ‘initiative’, ‘project definition’, ‘concept development’, ‘preliminary design’, and ‘verification of structural safety’ will be explained shortly below.\n",
+    "The terms *initiative*, *project definition*, *concept development*, *preliminary design*, and *verification of structural safety* will be explained shortly below.\n",
     "\n",
     "## Initiative\n",
     "The client initiates a construction project or structure. The designer,\n",
@@ -125,6 +125,8 @@
     "## Diagram of workflow during the structural design\n",
     "\n",
     "Klompenhouwer (2015) has developed a flowchart that focusses on the smaller substeps of 1.3 and their logical order. The figure is shown below. It can be useful as a more detailed guideline. A PDF-version of the same figure can be found [here](Images/20240718_flowchart_structural_design_Klompenhouwer.pdf) and a Dutch version [here](Images/Klompenhouwer_Stroomschema_constructief_ontwerpen.pdf).\n",
+    "\n",
+    "<br>\n",
     "\n",
     "```{figure} Images/20240718_flowchart_structural_design_Klompenhouwer.png\n",
     "---\n",
