Feedback phase 1, commit 2

--- a/book/basics/steel/hollow_sections.ipynb
+++ b/book/basics/steel/hollow_sections.ipynb
@@ -61,7 +61,7 @@
     "---\n",
     "Maeslantkering, Nieuwe Waterweg\n",
     "```\n",
-    "At the Maeslantkering in the Nieuwe Waterweg the 240 m long trusses are made of welded circular hollow sections with a diameter of 1,8 m and a thickness of 60 to 90 mm. These trusses support the closed hollow barrier. For more information see Bouwen met Staal magazine 101 (1991) p. 35-44; 121 (1994) p. 42-48 and 135 (1997) p. 8-24.\n",
+    "At the Maeslantkering in the Nieuwe Waterweg the 240 m long trusses are made of welded circular hollow sections with a diameter of 1,8 m and a thickness of 60 to 90 mm. These trusses support the closed hollow barrier.\n",
     "\n",
     "### Dintelhaven railway bridge\n",
     "```{figure} Images/dintelhaven.png\n",
