--- a/book/basics/sustainable_properties_materials.ipynb
+++ b/book/basics/sustainable_properties_materials.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Sustainable properties of materials\n",
     "\n",
-    "## Environmental Costs and Emissions of Building Materials\n",
+    "### Environmental Costs and Emissions of Building Materials\n",
     "\n",
     "When selecting building materials, it is essential to consider their environmental impacts. Below is a comparison of the environmental costs and emissions associated with concrete [^1], steel [^2], and timber [^4].\n",
     "\n",
@@ -71,14 +71,10 @@
     "| **Ecotoxicity Potential** | Low, if sourced sustainably          | Moderate                              | High, due to pollutants from mining and production |\n",
     "| **Resource Depletion**   | Renewable resource if managed well   | High, due to non-renewable aggregates and water use | Very high, due to non-renewable ore and energy-intensive processes |\n",
     "\n",
-    "\n",
-    "### Summary\n",
-    "\n",
     "Each building material has its own set of environmental impacts. Concrete and steel are associated with high CO2 emissions and energy consumption, whereas timber can act as a carbon sink but requires careful management to prevent deforestation. Sustainable practices and innovative technologies can help mitigate some of these environmental impacts.\n",
     "\n",
-    "## Comparison of Steel, Timber, and Concrete Structures in Terms of Costs per Square Meter\n",
+    "### Comparison of Steel, Timber, and Concrete Structures\n",
     "\n",
-    "### Introduction\n",
     "When deciding on the material for constructing a building, it's essential to consider the costs associated with each option. Steel, timber, and concrete are among the most commonly used materials in the construction industry. This comparison will analyze their costs per square meter, taking into account material, labor, and maintenance costs.\n",
     "\n",
     "### Steel Structures\n",
@@ -136,7 +132,7 @@
     "#### Total Cost\n",
     "- **Total Cost per Square Meter:** USD 56 to 183\n",
     "\n",
-    "### Summary\n",
+    "### Overview\n",
     "| Material    | Material Cost (USD per sqm) | Labor Cost (USD per sqm) | Maintenance Cost (USD per sqm annually) | Total Cost (USD per sqm) |\n",
     "|-------------|--------------------------|-----------------------|--------------------------------------|----------------------|\n",
     "| **Steel**   | 50 - 150               | 30 - 70             | 1 - 5                              | 80 - 225           |\n",
