--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "**Kanaalplaatvloeren** worden zowel voor de begane grondvloer als voor de verdiepingsvloer gebruikt. Deze vloeren dragen de belasting af in één specifieke richting, zoals aangegeven in de tekening van {numref}`figuurA2` in {ref}`content:BijlageA:labels`. Het dak over de gehele oppervlakte van het gebouw is voorzien van stalen dakplaten (zie {numref}`figuurA3` in {ref}`content:BijlageA:labels`). Ook de dakplaten dragen de belasting af in één richting\n",
     "\n",
-    "## Vraag 1: Veiligheid en Belastingen\n",
+    "## Veiligheid en Belastingen\n",
     "\n",
     "De constructie wordt gedimensioneerd op basis van de fundamentele belastingcombinaties met permanente-, en veranderlijke belastingen.\n",
     "\n",
