--- a/book/calculation_examples/steel/column.ipynb
+++ b/book/calculation_examples/steel/column.ipynb
@@ -50,11 +50,11 @@
     "\n",
     "```{table} Overview of different loads.\n",
     ":name: different-loads-overview\n",
-    "|                    | Opgelegde belasting | Opgelegde belasting | Rustende belasting | Rustende belasting | Gewicht ligger  | Gewicht ligger |\n",
-    "|--------------------|---------------------|---------------------|--------------------|--------------------|-----------------|----------------|\n",
-    "|                    | vloer               | dak                 | vloer              | dak                | vloer           | dak            |\n",
-    "|                    | [kN/m^2]            | [kN/m^2]            | [kN/m^2]           | [kN/m^2]           | [kN/m]          | [kN/m]         |\n",
-    "|   staalskelet      | 3                   | 1                   | 4.9                | 4.9                | 0.88            | 0.88           |\n",
+    "|                    | Imposed Load        | Imposed Load        | Resting Load       | Resting Load       | Beam Weight     | Beam Weight    |  \n",
+    "|--------------------|---------------------|---------------------|--------------------|--------------------|-----------------|----------------|  \n",
+    "|                    | Floor               | Roof                | Floor              | Roof               | Floor           | Roof           |  \n",
+    "|                    | [kN/m²]             | [kN/m²]             | [kN/m²]            | [kN/m²]            | [kN/m]          | [kN/m]         |  \n",
+    "| Steel Frame        | 3                   | 1                   | 4.9                | 4.9                | 0.88            | 0.88           |  \n",
     "```\n",
     "\n",
     "````{margin}\n",
