--- a/book/calculation_examples/timber/timber_columns.ipynb
+++ b/book/calculation_examples/timber/timber_columns.ipynb
@@ -4,22 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kolommen\n",
+    "# Columns  \n",
     "\n",
-    "Uitgangspunten: kolom gelamineerd hout GL24h, stramien 6 m x 6 m, houten vloer $G = 2.0 kN/m^2$ en CC2\n",
+    "This page provides calculation examples for the structural design of timber columns in accordance with modern engineering principles. It demonstrates key steps for verifying column dimensions, buckling resistance, and material stresses under various load conditions. Through clear examples and detailed calculations, the page illustrates how to optimise timber columns for stability and safety, ensuring compliance with design requirements. Assumptions: column made of laminated timber GL24h, grid 6 m x 6 m, timber floor $G = 2.0 \\, \\text{kN/m}^2$, and CC2  \n",
     "\n",
-    "| Q = 2 kN/m², max 3 bouwlagen | Q = 2 kN/m², max 5 bouwlagen |Q = 5 kN/m², max 3 bouwlagen |\n",
-    "|-----------------------|-----------------------|-----------------------|\n",
-    "| Q = 2 kN/m²           |Q = 2 kN/m²           |Q = 5 kN/m²           |\n",
-    "| $P_{d}$ = 5.4 kN/m²   | $P_{d}$ = 5.4 kN/m²   | $P_{d}$ = 9.9 kN/m²   |\n",
-    "| n = 2 verdiepingen    | n = 4 verdiepingen    | n = 2 verdiepingen    |\n",
-    "| $F_{Gk}$ = 144 kN     | $F_{Gk}$ = 288 kN     | $F_{Gk}$ = 144 kN     |\n",
-    "| $F_{Qk}$ = 144 kN     | $F_{Qk}$ = 288 kN     | $F_{Qk}$ = 360 kN     |"
+    "| $Q = 2 \\, \\text{kN/m}^2$, max 3 storeys | $Q = 2 \\, \\text{kN/m}^2$, max 5 storeys | $Q = 5 \\, \\text{kN/m}^2$, max 3 storeys |  \n",
+    "|-----------------------|-----------------------|-----------------------|  \n",
+    "| $Q = 2 \\, \\text{kN/m}^2$           | $Q = 2 \\, \\text{kN/m}^2$           | $Q = 5 \\, \\text{kN/m}^2$           |  \n",
+    "| $P_{d} = 5.4 \\, \\text{kN/m}^2$   | $P_{d} = 5.4 \\, \\text{kN/m}^2$   | $P_{d} = 9.9 \\, \\text{kN/m}^2$   |  \n",
+    "| $n = 2 \\, \\text{storeys}$    | $n = 4 \\, \\text{storeys}$    | $n = 2 \\, \\text{storeys}$    |  \n",
+    "| $F_{Gk} = 144 \\, \\text{kN}$     | $F_{Gk} = 288 \\, \\text{kN}$     | $F_{Gk} = 144 \\, \\text{kN}$     |  \n",
+    "| $F_{Qk} = 144 \\, \\text{kN}$     | $F_{Qk} = 288 \\, \\text{kN}$     | $F_{Qk} = 360 \\, \\text{kN}$     |  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,11 +47,11 @@
     "hb_53 = [221, 230, 257, 287]\n",
     "\n",
     "plt.figure()\n",
-    "plt.title('Houten kolom')\n",
-    "plt.plot(L_buc23, hb_23, c= 'b', label='Q = 2 kN /m^2, max 3 bouwlagen')\n",
-    "plt.plot(L_buc25, hb_25, c= 'g', label='Q = 2 kN /m^2, max 5 bouwlagen')\n",
-    "plt.plot(L_buc53, hb_53, c= 'r', label='Q = 5 kN /m^2, max 3 bouwlagen')\n",
-    "plt.xlabel('Kniklengte [m]')\n",
+    "plt.title('Timber column')\n",
+    "plt.plot(L_buc23, hb_23, c= 'b', label='Q = 2 kN /m^2, max 3 building layers')\n",
+    "plt.plot(L_buc25, hb_25, c= 'g', label='Q = 2 kN /m^2, max 5 building layers')\n",
+    "plt.plot(L_buc53, hb_53, c= 'r', label='Q = 5 kN /m^2, max 3 building layers')\n",
+    "plt.xlabel('Effective length [m]')\n",
     "plt.ylabel('h=b [mm]')\n",
     "plt.legend(loc='best');"
    ]
