--- a/book/design_workflow/general_mechanics/mechanic_formulas.ipynb
+++ b/book/design_workflow/general_mechanics/mechanic_formulas.ipynb
@@ -13,6 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This table summarises key mechanical formulas for beams under extension and bending, categorised into kinematic, constitutive, static, and differential equations. Kinematic relations describe deformation through strain \\(\\epsilon\\) and curvature \\(\\kappa\\). Constitutive relations link internal forces to deformation: axial force \\(N\\) relates to strain via \\(EA\\), and bending moment \\(M\\) relates to curvature via \\(EI\\). Static relations ensure equilibrium of forces and moments under external loads \\(q_z\\). The differential equations govern axial deformation (second derivative of \\(u\\)) and bending behaviour (fourth derivative of \\(w\\)). Finally, the strain \\(\\epsilon(z)\\) and stress \\(\\sigma(z)\\) formulas combine contributions from axial forces and bending moments, essential for structural analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```{table} Mechanic formulas overview.\n",
     ":name: mechanic-formulas\n",
     "| | Kinematic relations | Constitutive relations | Static relations | Differential equation |\n",
