--- a/book/basics/concrete/reinforcement.ipynb
+++ b/book/basics/concrete/reinforcement.ipynb
@@ -6,6 +6,30 @@
    "source": [
     "# Reinforcement\n",
     "\n",
+    "This paragraph contains information on the material properties of reinforcement steel.\n",
+    "\n",
+    "## Strength and stiffness\n",
+    "\n",
+    "### Material properties (bars)\n",
+    "\n",
+    "```{table} Material properties for reinforcement steel in concrete.\n",
+    ":name: reinforcement-steel-properties\n",
+    "| Steel Grade         | Tensile Strength $( f_{t;k} )$ [N/mm²] | Yield Stress $( f_{y;k} )$ [N/mm²] | Strain at Maximum Load $\\varepsilon_{su}$ [‰] |\n",
+    "|---------------------|-----------------------------------------|-------------------------------------|----------------------------------------------------|\n",
+    "| FeB 400 HWL, HK     | 400                                     | 350                                 | 4.00                                               |\n",
+    "| FeB 500 HWL, HK     | 500                                     | 435                                 | 3.25                                               |\n",
+    "| FeB 500 HKN         | 500                                     | 435                                 | 2.75                                               |\n",
+    "```\n",
+    "\n",
+    "### Material properties (nets)\n",
+    "\n",
+    "```{table} Material properties reinforcement steel nets.\n",
+    ":name: reinforcement-steel-nets-properties\n",
+    "| Steel Grade         | Tensile Strength $( f_{t;k} )$ [N/mm²] | Design value tensile strength $( f_{y;k} )$ [N/mm²] | Strain at Maximum Load $\\varepsilon_{su}$ [‰] |\n",
+    "|----------------------------|-------------------------|--------------------------------------|------------------------------------------------|\n",
+    "| FeB 500 HKN, HWN           | 500                     | 435                                  | 2.175                                          |\n",
+    "```\n",
+    "\n",
     "## Reinforcement areas for beams and columns\n",
     "\n",
     "```{table} Steel reinforcement areas.\n",
