--- a/book/basics/mechanical_properties_materials.ipynb
+++ b/book/basics/mechanical_properties_materials.ipynb
@@ -8,8 +8,6 @@
     "\n",
     "This chapter offers infomation on the different structural materials. The materials are compared on a few characteristic aspects. More detailed information can be found in the chapters.\n",
     "\n",
-    "## Material and construction types\n",
-    "\n",
     "### Construction types and spans\n",
     "\n",
     "```{figure} Images/construction_types_spans.png\n",
@@ -20,7 +18,7 @@
     "Construction types and spans.\n",
     "```\n",
     "\n",
-    "## Material properties\n",
+    "### Material properties\n",
     "\n",
     "| Property           | Timber                                            | Steel                                             | Concrete (in situ)                              | Concrete (prestressed and/or precast)           |\n",
     "|--------------------|---------------------------------------------------|---------------------------------------------------|--------------------------------------------------|--------------------------------------------------|\n",
